cluster/app/home/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    shared-gateway-access: "true"
