cluster/app/home/vault/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames:
    - "hashivault.thoughtless.eu"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: vault
      port: 8200
